--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-// ur code here 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pulak</title>
+</head>
+<body>
+    <h1>Story</h1>
+    <p>Pulak will set the story.</p>
+</body>
+</html>
